--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cssnano": "^3.7.0",
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-gh-pages": "^1.1.0",
     "grunt-postcss": "^0.8.0",
     "grunt-sass": "^1.2.0"
   }
