--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^6.3.6",
     "cssnano": "^3.7.0",
     "grunt": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-gh-pages": "^1.1.0",
     "grunt-postcss": "^0.8.0",
